* (holomekc) removed certsPath from configuration * (holomekc) update to new bosch-smart-home-bridge lib version * (holomekc) adjustments due to changed of bshb lib * (holomekc) add migration from old configuration and new one where certificates are stored in ioBroker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,11 @@
 
 		"sourceMap": false,
 		"inlineSourceMap": false,
-		"watch": false
+		"watch": false,
+		"typeRoots": [
+			"node_modules/@types",
+			"node_modules/bosch-smart-home-bridge/@types"
+		]
 	},
 	"include": [
 		"**/*.ts"
