--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,21 @@ os:
   - linux
   - osx
   - windows
+
 language: node_js
 node_js:
-  - '8'
   - '10'
   - '12'
+
 env:
-  - CXX=g++-4.8
+  - CXX=g++-6
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
       - g++-6
+
 before_install:
   - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then CC=gcc-6; fi'
   - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CC=g++-6; fi'
@@ -23,7 +25,7 @@ before_script:
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm; fi'
   - npm -v
 script:
-  - 'npm run test:package'
-  - 'npm run test:unit'
-  - 'export DEBUG=testing:*'
-  - 'npm run test:integration'
+  - npm run test:package
+  - npm run test:unit
+  - export DEBUG=testing:*
+  - npm run test:integration
