--- a/package.json
+++ b/package.json
@@ -25,47 +25,58 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^2.2.0",
-    "@iobroker/testing": "^2.4.4",
-    "@types/chai": "^4.2.20",
+    "@alcalzone/release-script": "^2.2.1",
+    "@iobroker/testing": "^2.5.1",
+    "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
     "@types/gulp": "^4.0.9",
-    "@types/mocha": "^8.2.3",
-    "@types/node": "^14.17.4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^14.17.16",
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^10.0.2",
     "@types/sinon-chai": "^3.2.5",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
-    "axios": "^0.21.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "axios": "^0.21.4",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "gulp": "^4.0.2",
     "mocha": "^9.1.1",
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
-    "sinon": "^11.1.1",
+    "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.5"
+    "source-map-support": "^0.5.20",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
+    "express": "^4.17.1"
   },
   "main": "build/main.js",
+  "files": [
+    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*).json",
+    "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
+    "build/",
+    "www/",
+    "io-package.json",
+    "LICENSE"
+  ],
   "scripts": {
     "prebuild": "rimraf ./build",
     "build:ts": "tsc -p tsconfig.build.json",
     "build": "npm run build:ts",
     "watch:ts": "tsc -p tsconfig.build.json --watch",
     "watch": "npm run watch:ts",
-    "test:ts": "mocha --opts test/mocha.custom.opts",
+    "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
+    "check": "tsc --noEmit",
     "coverage": "nyc npm run test:ts",
-    "lint": "eslint --ext .ts src",
+    "lint": "eslint --ext .ts src/",
+    "release": "release-script",
     "pack": "npm run build && npm pack"
   },
   "nyc": {
