--- a/package.json
+++ b/package.json
@@ -18,44 +18,47 @@
     "type": "git",
     "url": "https://github.com/holomekc/ioBroker.bshb"
   },
+  "engines": {
+    "node": ">= 14"
+  },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.6.0",
-    "bosch-smart-home-bridge": "^1.0.4",
-    "rxjs": "^7.5.5",
-    "uuid": "^8.3.2"
+    "@iobroker/adapter-core": "^2.6.6",
+    "bosch-smart-home-bridge": "^1.1.0",
+    "rxjs": "^7.5.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^3.5.2",
-    "@iobroker/testing": "^2.5.4",
-    "@types/chai": "^4.3.0",
+    "@alcalzone/release-script": "^3.5.9",
+    "@alcalzone/release-script-plugin-iobroker": "^3.5.9",
+    "@alcalzone/release-script-plugin-license": "^3.5.9",
+    "@alcalzone/release-script-plugin-manual-review": "^3.5.9",
+    "@iobroker/adapter-dev": "^1.1.0",
+    "@iobroker/testing": "^4.1.0",
+    "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
-    "@types/gulp": "^4.0.9",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^16.11.11",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^16.11.62",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^10.0.11",
+    "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.8",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "axios": "^0.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.32.0",
-    "gulp": "^4.0.2",
-    "mocha": "^9.2.1",
+    "eslint": "^8.24.0",
+    "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
-    "sinon": "^13.0.1",
+    "sinon": "^13.0.2",
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.6.3",
-    "express": "^4.17.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.4"
   },
   "main": "build/main.js",
   "files": [
-    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*).json",
+    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).json",
     "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
     "build/",
     "www/",
