--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "homepage": "https://github.com/holomekc/ioBroker.bshb",
   "license": "MIT",
   "keywords": [
-    "ioBroker",
     "Bosch Smart Home",
-    "Smart Home",
     "home automation"
   ],
   "repository": {
@@ -23,7 +21,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.6",
-    "bosch-smart-home-bridge": "^1.1.5",
+    "bosch-smart-home-bridge": "^1.1.6",
     "rxjs": "^7.5.7",
     "uuid": "^9.0.0"
   },
@@ -80,7 +78,8 @@
     "coverage": "nyc npm run test:ts",
     "lint": "eslint --ext .ts src/",
     "release": "release-script",
-    "pack": "npm run build && npm pack"
+    "pack": "npm run build && npm pack",
+    "translate": "translate-adapter"
   },
   "nyc": {
     "include": [
