(holomekc) Support for rooms. Configuration to ignore server certificates. Allow ttesting controller 2 and can prevent issues in case certificates expire. Less secure though.

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -42,6 +42,14 @@
             "min": 1000,
             "sm": 12,
             "md": 6
+        },
+        "skipServerCertificateCheck": {
+            "type": "checkbox",
+            "label": "skipServerCertificateCheck",
+            "help": "skipServerCertificateCheck-detail",
+            "newLine": true,
+            "sm": 12,
+            "md": 6
         }
     }
 }
