--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.7",
-    "bosch-smart-home-bridge": "^1.1.7",
-    "rxjs": "^7.8.0",
-    "uuid": "^9.0.0"
+    "bosch-smart-home-bridge": "^1.1.8",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
@@ -53,7 +52,7 @@
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "express": "^4.18.2"
   },
   "main": "build/main.js",
