--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "url": "https://github.com/holomekc/ioBroker.bshb"
   },
   "engines": {
-    "node": ">= 14"
+    "node": ">= 16"
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.7",
-    "bosch-smart-home-bridge": "^1.2.1",
+    "bosch-smart-home-bridge": "^1.2.2",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
@@ -41,6 +41,7 @@
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "@tsconfig/node16": "^1.0.3",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.32.0",
