--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.bshb",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Connects Bosch Smart Home Interface-Processes to ioBroker",
   "author": {
     "name": "Christopher Holomek",
@@ -21,36 +21,36 @@
     "node": ">= 16"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.6.8",
-    "bosch-smart-home-bridge": "^1.2.2",
-    "rxjs": "^7.8.0"
+    "@iobroker/adapter-core": "3.0.4",
+    "bosch-smart-home-bridge": "1.3.5",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@iobroker/adapter-dev": "^1.2.0",
-    "@iobroker/testing": "^4.1.0",
-    "@types/chai": "^4.3.4",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^16.18.11",
-    "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^10.0.13",
-    "@types/sinon-chai": "^3.2.9",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "@tsconfig/node16": "^1.0.3",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^8.39.0",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "proxyquire": "^2.1.3",
-    "rimraf": "^5.0.0",
-    "sinon": "^15.0.3",
-    "sinon-chai": "^3.7.0",
-    "source-map-support": "^0.5.21",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "express": "^4.18.2"
+    "@iobroker/adapter-dev": "1.2.0",
+    "@iobroker/testing": "4.1.0",
+    "@types/chai": "4.3.11",
+    "@types/chai-as-promised": "7.1.8",
+    "@types/mocha": "10.0.6",
+    "@types/node": "20.10.1",
+    "@types/proxyquire": "1.3.31",
+    "@types/sinon": "17.0.2",
+    "@types/sinon-chai": "3.2.12",
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.13.1",
+    "@tsconfig/node16": "16.1.1",
+    "chai": "4.3.10",
+    "chai-as-promised": "7.1.1",
+    "eslint": "8.54.0",
+    "mocha": "10.2.0",
+    "nyc": "15.1.0",
+    "proxyquire": "2.1.3",
+    "rimraf": "5.0.5",
+    "sinon": "17.0.1",
+    "sinon-chai": "3.7.0",
+    "source-map-support": "0.5.21",
+    "ts-node": "10.9.1",
+    "typescript": "5.3.2",
+    "express": "4.18.2"
   },
   "main": "build/main.js",
   "files": [
