--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,8 +52,9 @@ jobs:
           # install-command: 'npm install'
           build: true
 
-    # Deploys the final package to NPM
-  deploy:
+  # Release the final package to NPM
+  release:
+    if: false
     needs: [ adapter-tests ]
 
     runs-on: ubuntu-latest
