--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,8 @@ jobs:
 
   # Runs adapter tests on all supported node versions and OSes
   adapter-tests:
-    if: contains(github.event.head_commit.message, '[skip ci]') == false
+    #if: contains(github.event.head_commit.message, '[skip ci]') == false
+    if: false
 
     needs: [ check-and-lint ]
 
@@ -54,7 +55,6 @@ jobs:
 
   # Release the final package to NPM
   release:
-    if: false
     needs: [ adapter-tests ]
 
     runs-on: ubuntu-latest
