--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,8 @@ concurrency:
 jobs:
   # Performs quick checks before the expensive test runs
   check-and-lint:
-    if: contains(github.event.head_commit.message, '[skip ci]') == false
+    #if: contains(github.event.head_commit.message, '[skip ci]') == false
+    if: false
 
     runs-on: ubuntu-latest
 
@@ -55,7 +56,7 @@ jobs:
 
   # Release the final package to NPM
   release:
-    needs: [ adapter-tests ]
+    #needs: [ adapter-tests ]
 
     runs-on: ubuntu-latest
     strategy:
