--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Extract the version from the tag
         id: extract_release
         run: |
-          echo "version=$(echo $GITHUB_REF | cut -d / -f 3)" >> $GITHUB_OUTPUT
+          echo "version=${{ github.ref }}" >> $GITHUB_OUTPUT
 
       - name: Extract changelog
         id: extract_changelog
