test release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,8 +66,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-tags: true
+        run: git fetch --prune --unshallow
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
