--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - run: git fetch --prune --unshallow
+
+      - name: Fetch tags
+        # Needed to extract tag later on
+        run: git fetch --prune --unshallow
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -88,7 +91,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Create a clean build
-        run: npm run build
+        run: npm run pack
 
       #      - name: Publish package to npm
       #        env:
@@ -98,6 +101,7 @@ jobs:
       #          npm publish
 
       - name: Create Github Release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -109,21 +113,13 @@ jobs:
           #prerelease: ${{ contains(steps.extract_release.outputs.VERSION, '-') }}
           body: ${{ steps.extract_changelog.outputs.markdown }}
 
-      # When using Sentry for error reporting, Sentry could be informed about new releases
-      # To enable create a API-Token in Sentry (User settings, API keys)
-      # Enter this token as a GitHub secret (with name SENTRY_AUTH_TOKEN) in the repository options
-      # Then uncomment and customize the following block:
-      #- name: Notify Sentry.io about the release
-      #  run: |
-      #      npm i -g @sentry/cli
-      #      export SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
-      #      export SENTRY_URL=https://sentry.iobroker.net
-      #      export SENTRY_ORG=iobroker
-      #      export SENTRY_PROJECT=iobroker-template
-      #      export SENTRY_VERSION=iobroker.template@${{ steps.extract_release.outputs.VERSION }}
-      #      sentry-cli releases new $SENTRY_VERSION
-      #      sentry-cli releases finalize $SENTRY_VERSION
-      #      # Add the following line BEFORE finalize if repositories are connected in Sentry
-      #      #sentry-cli releases set-commits $SENTRY_VERSION --auto
-      #      # Add the following line BEFORE finalize if sourcemap uploads are needed
-      #      #sentry-cli releases files $SENTRY_VERSION upload-sourcemaps build/
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./iobroker.bshb-${{ steps.extract_release.outputs.version }}.tgz
+          asset_name: iobroker.bshb-${{ steps.extract_release.outputs.version }}.tgz
+          asset_content_type: application/gzip
