--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,7 @@ concurrency:
 jobs:
   # Performs quick checks before the expensive test runs
   check-and-lint:
-    #if: contains(github.event.head_commit.message, '[skip ci]') == false
-    if: false
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     runs-on: ubuntu-latest
 
@@ -34,8 +33,7 @@ jobs:
 
   # Runs adapter tests on all supported node versions and OSes
   adapter-tests:
-    #if: contains(github.event.head_commit.message, '[skip ci]') == false
-    if: false
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     needs: [ check-and-lint ]
 
@@ -56,7 +54,7 @@ jobs:
 
   # Release the final package to NPM
   release:
-    #needs: [ adapter-tests ]
+    needs: [ adapter-tests ]
 
     runs-on: ubuntu-latest
     strategy:
@@ -93,12 +91,12 @@ jobs:
       - name: Create a clean build
         run: npm run pack
 
-      #      - name: Publish package to npm
-      #        env:
-      #          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      #        run: |
-      #          npm whoami
-      #          npm publish
+      - name: Publish package to npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm whoami
+          npm publish
 
       - name: Create Github Release
         id: create_release
