--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,9 +92,8 @@ jobs:
         run: npm run pack
 
       - name: Publish package to npm
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
           npm whoami
           npm publish
 
