--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,8 +104,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.extract_release.outputs.version }}
-          release_name: Release ${{ steps.extract_release.outputs.version }}
-          draft: true
+          release_name: ${{ steps.extract_release.outputs.version }}
+          draft: false
           prerelease: false
           body: ${{ steps.extract_changelog.outputs.markdown }}
 
