--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.bshb",
-  "version": "0.2.8",
+  "version": "0.3.0",
   "description": "Connects Bosch Smart Home Interface-Processes to ioBroker",
   "author": {
     "name": "Christopher Holomek",
@@ -21,30 +21,31 @@
     "node": ">= 18"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "3.1.4",
-    "bosch-smart-home-bridge": "1.4.1",
+    "@iobroker/adapter-core": "^3.1.6",
+    "bosch-smart-home-bridge": "1.6.0",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@iobroker/adapter-dev": "1.3.0",
-    "@iobroker/testing": "4.1.3",
+    "@iobroker/adapter-dev": "^1.0.1",
+    "@iobroker/testing": "^4.1.3",
+    "@tsconfig/node20": "20.1.4",
     "@types/chai": "4.3.17",
     "@types/mocha": "10.0.7",
-    "@types/node": "20.12.8",
+    "@types/node": "20.14.8",
     "@types/proxyquire": "1.3.31",
-    "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "@tsconfig/node20": "20.1.4",
-    "chai": "5.1.1",
-    "eslint": "8.57.0",
-    "mocha": "10.7.0",
+    "@typescript-eslint/eslint-plugin": "8.0.1",
+    "@typescript-eslint/parser": "8.0.1",
+    "chai": "4.5.0",
+    "eslint": "9.9.0",
+    "express": "4.19.2",
+    "globals": "^15.9.0",
+    "mocha": "10.7.3",
     "nyc": "17.0.0",
     "proxyquire": "2.1.3",
     "rimraf": "6.0.1",
     "source-map-support": "0.5.21",
     "ts-node": "10.9.2",
-    "typescript": "5.5.4",
-    "express": "4.19.2"
+    "typescript": "5.5.4"
   },
   "main": "build/main.js",
   "files": [
@@ -68,7 +69,7 @@
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
     "coverage": "nyc npm run test:ts",
-    "lint": "eslint --ext .ts src/",
+    "lint": "eslint",
     "release": "release-script",
     "pack": "npm run build && npm pack",
     "translate": "translate-adapter"
