--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.bshb",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Connects Bosch Smart Home Interface-Processes to ioBroker",
   "author": {
     "name": "Christopher Holomek",
@@ -18,34 +18,34 @@
     "url": "https://github.com/holomekc/ioBroker.bshb"
   },
   "engines": {
-    "node": ">= 18"
+    "node": ">= 20"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.1.6",
-    "bosch-smart-home-bridge": "1.6.0",
+    "@iobroker/adapter-core": "^3.2.3",
+    "bosch-smart-home-bridge": "1.7.0",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
     "@iobroker/adapter-dev": "^1.3.0",
-    "@iobroker/testing": "^4.1.3",
-    "@tsconfig/node20": "20.1.4",
-    "@types/chai": "4.3.17",
-    "@types/mocha": "10.0.7",
-    "@types/node": "20.14.8",
+    "@iobroker/testing": "^5.0.0",
+    "@tsconfig/node22": "22.0.0",
+    "@types/chai": "4.3.20",
+    "@types/mocha": "10.0.10",
+    "@types/node": "22.10.5",
     "@types/proxyquire": "1.3.31",
-    "@typescript-eslint/eslint-plugin": "8.0.1",
-    "@typescript-eslint/parser": "8.0.1",
+    "@typescript-eslint/eslint-plugin": "8.19.0",
+    "@typescript-eslint/parser": "8.19.0",
     "chai": "4.5.0",
-    "eslint": "9.9.0",
-    "express": "4.19.2",
-    "globals": "^15.9.0",
-    "mocha": "10.7.3",
-    "nyc": "17.0.0",
+    "eslint": "9.17.0",
+    "express": "5.0.1",
+    "globals": "15.14.0",
+    "mocha": "11.0.1",
+    "c8": "10.1.3",
     "proxyquire": "2.1.3",
     "rimraf": "6.0.1",
     "source-map-support": "0.5.21",
     "ts-node": "10.9.2",
-    "typescript": "5.5.4"
+    "typescript": "5.7.2"
   },
   "main": "build/main.js",
   "files": [
@@ -68,7 +68,7 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
-    "coverage": "nyc npm run test:ts",
+    "coverage": "c8 npm run test:ts",
     "lint": "eslint",
     "release": "release-script",
     "pack": "npm run build && npm pack",
