--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,14 +18,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [ 22.x ]
-
     steps:
       - uses: ioBroker/testing-action-check@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 22.x
           # Uncomment the following line if your adapter cannot be installed using 'npm ci'
           # install-command: 'npm install'
           type-checking: true
@@ -62,60 +58,48 @@ jobs:
         node-version: [ 22.x ]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Fetch tags
-        # Needed to extract tag later on
-        run: git fetch --prune --unshallow
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          fetch-depth: 0
 
-      - name: Extract the version from the tag
-        id: extract_release
-        run: |
-          echo "version=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_OUTPUT
-
-      - name: Extract changelog
-        id: extract_changelog
-        uses: sean0x42/markdown-extract@v2
+      - uses: actions/setup-node@v4
         with:
-          file: README.md
-          pattern: ${{ steps.extract_release.outputs.version }}
+          node-version: 22.x
+          cache: npm
 
-      - name: Install Dependencies
-        run: npm ci
-      - name: Create a clean build
-        run: npm run pack
+      - name: install
+        run: npm install
 
-      - name: Publish package to npm
-        run: |
-          npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-          npm whoami
-          npm publish
+      - name: build
+        run: npm run build
 
-      - name: Create Github Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Release
+        id: release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.extract_release.outputs.version }}
-          release_name: ${{ steps.extract_release.outputs.version }}
-          draft: false
-          prerelease: false
-          body: ${{ steps.extract_changelog.outputs.markdown }}
+          GIT_AUTHOR_NAME: holomekc
+          GIT_AUTHOR_EMAIL: 30546982+holomekc@users.noreply.github.com
+          GIT_COMMITTER_NAME: holomekc
+          GIT_COMMITTER_EMAIL: 30546982+holomekc@users.noreply.github.com
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          yarn run release
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+      - name: Create Release Notes
+        id: create-release-notes
+        shell: bash
+        if: steps.release.outputs.version != ''
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./iobroker.bshb-${{ steps.extract_release.outputs.version }}.tgz
-          asset_name: iobroker.bshb-${{ steps.extract_release.outputs.version }}.tgz
-          asset_content_type: application/gzip
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          #!/bin/bash
+          gh api \
+          --method POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          /repos/${{ github.repository }}/releases \
+          -f tag_name='${{ steps.release.outputs.version }}' \
+          -f target_commitish='${{ github.sha }}' \
+          -f name='${{ steps.release.outputs.version }}' \
+          -F draft=false \
+          -F prerelease=false \
+          -F generate_release_notes=true
