--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "https://github.com/holomekc/ioBroker.bshb"
   },
+  "bugs": {
+    "url": "https://github.com/holomekc/bosch-smart-home-bridge/issues"
+  },
   "engines": {
     "node": ">= 20"
   },
@@ -26,8 +29,14 @@
     "rxjs": "7.8.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@iobroker/adapter-dev": "^1.3.0",
     "@iobroker/testing": "^5.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@tsconfig/node22": "22.0.0",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
@@ -35,14 +44,17 @@
     "@types/proxyquire": "1.3.31",
     "@typescript-eslint/eslint-plugin": "8.19.0",
     "@typescript-eslint/parser": "8.19.0",
+    "c8": "10.1.3",
     "chai": "4.5.0",
+    "conventional-changelog-conventionalcommits": "8.0.0",
     "eslint": "9.17.0",
     "express": "5.0.1",
     "globals": "15.14.0",
+    "husky": "9.1.7",
     "mocha": "11.0.1",
-    "c8": "10.1.3",
     "proxyquire": "2.1.3",
     "rimraf": "6.0.1",
+    "semantic-release": "24.2.1",
     "source-map-support": "0.5.21",
     "ts-node": "10.9.2",
     "typescript": "5.7.2"
@@ -57,6 +69,7 @@
     "LICENSE"
   ],
   "scripts": {
+    "postinstall": "husky && node disable-publish-semantic-release-github.cjs",
     "prebuild": "rimraf ./build",
     "build:ts": "tsc -p tsconfig.build.json",
     "build": "npm run build:ts",
@@ -70,9 +83,8 @@
     "check": "tsc --noEmit",
     "coverage": "c8 npm run test:ts",
     "lint": "eslint",
-    "release": "release-script",
-    "pack": "npm run build && npm pack",
-    "translate": "translate-adapter"
+    "release": "semantic-release",
+    "pack": "npm run build && npm pack"
   },
   "nyc": {
     "include": [
@@ -93,9 +105,6 @@
     ],
     "sourceMap": true,
     "instrument": true
-  },
-  "bugs": {
-    "url": "https://github.com/holomekc/ioBroker.bshb/issues"
   },
   "readmeFilename": "README.md"
 }
