feat: test semantic-release
Current state is that it is a lot of effort to make this work

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
   # Release the final package to NPM
   release:
     needs: [ adapter-tests ]
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     runs-on: ubuntu-latest
     strategy:
