--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 22.x
           # Uncomment the following line if your adapter cannot be installed using 'npm ci'
-          # install-command: 'npm install'
+          install-command: 'corepack enable && yarn install'
           type-checking: true
           lint: true
 
