--- a/package.json
+++ b/package.json
@@ -23,6 +23,28 @@
   "engines": {
     "node": ">= 20"
   },
+  "scripts": {
+    "postinstall": "husky && node disable-publish-semantic-release-github.cjs",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
+    "prebuild": "rimraf ./build",
+    "build:ts": "tsc -p tsconfig.build.json",
+    "build": "npm run build:ts",
+    "watch:ts": "tsc -p tsconfig.build.json --watch",
+    "watch": "npm run watch:ts",
+    "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
+    "test:package": "mocha test/package --exit",
+    "test:unit": "mocha test/unit --exit",
+    "test:integration": "mocha test/integration --exit",
+    "test": "npm run test:ts && npm run test:package",
+    "check": "tsc --noEmit",
+    "coverage": "c8 npm run test:ts",
+    "lint": "eslint",
+    "lint:fix": "eslint --max-warnings 0 --fix .",
+    "prettier": "prettier --write .",
+    "release": "semantic-release",
+    "pack": "npm run build && npm pack"
+  },
   "dependencies": {
     "@iobroker/adapter-core": "^3.2.3",
     "bosch-smart-home-bridge": "1.7.0",
@@ -31,6 +53,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.17.0",
     "@iobroker/adapter-dev": "^1.3.0",
     "@iobroker/testing": "^5.0.0",
     "@semantic-release/changelog": "^6.0.3",
@@ -48,10 +72,16 @@
     "chai": "4.5.0",
     "conventional-changelog-conventionalcommits": "8.0.0",
     "eslint": "9.17.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-unused-imports": "4.1.4",
     "express": "5.0.1",
     "globals": "15.14.0",
     "husky": "9.1.7",
     "mocha": "11.0.1",
+    "prettier": "3.4.2",
+    "prettier-eslint": "16.3.0",
     "proxyquire": "2.1.3",
     "rimraf": "6.0.1",
     "semantic-release": "24.2.1",
@@ -68,24 +98,6 @@
     "io-package.json",
     "LICENSE"
   ],
-  "scripts": {
-    "postinstall": "husky && node disable-publish-semantic-release-github.cjs",
-    "prebuild": "rimraf ./build",
-    "build:ts": "tsc -p tsconfig.build.json",
-    "build": "npm run build:ts",
-    "watch:ts": "tsc -p tsconfig.build.json --watch",
-    "watch": "npm run watch:ts",
-    "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
-    "test:package": "mocha test/package --exit",
-    "test:unit": "mocha test/unit --exit",
-    "test:integration": "mocha test/integration --exit",
-    "test": "npm run test:ts && npm run test:package",
-    "check": "tsc --noEmit",
-    "coverage": "c8 npm run test:ts",
-    "lint": "eslint",
-    "release": "semantic-release",
-    "pack": "npm run build && npm pack"
-  },
   "nyc": {
     "include": [
       "src/**/*.ts"
@@ -106,5 +118,6 @@
     "sourceMap": true,
     "instrument": true
   },
-  "readmeFilename": "README.md"
+  "readmeFilename": "README.md",
+  "packageManager": "yarn@4.6.0"
 }
