--- a/package.json
+++ b/package.json
@@ -29,24 +29,24 @@
     "postpack": "pinst --enable",
     "prebuild": "rimraf ./build",
     "build:ts": "tsc -p tsconfig.build.json",
-    "build": "npm run build:ts",
+    "build": "yarn run build:ts",
     "watch:ts": "tsc -p tsconfig.build.json --watch",
-    "watch": "npm run watch:ts",
+    "watch": "yarn run watch:ts",
     "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
-    "test": "npm run test:ts && npm run test:package",
+    "test": "yarn run test:ts && yarn run test:package",
     "check": "tsc --noEmit",
-    "coverage": "c8 npm run test:ts",
+    "coverage": "c8 yarn run test:ts",
     "lint": "eslint",
     "lint:fix": "eslint --max-warnings 0 --fix .",
     "prettier": "prettier --write .",
     "release": "semantic-release",
-    "pack": "npm run build && npm pack"
+    "pack": "yarn run build && yarn pack --out ./%s-%v.tgz"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.2.3",
+    "@iobroker/adapter-core": "3.2.3",
     "bosch-smart-home-bridge": "1.7.0",
     "rxjs": "7.8.1"
   },
@@ -57,6 +57,7 @@
     "@eslint/js": "9.17.0",
     "@iobroker/adapter-dev": "^1.3.0",
     "@iobroker/testing": "^5.0.0",
+    "@iobroker/types": "^6.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -80,6 +81,7 @@
     "globals": "15.14.0",
     "husky": "9.1.7",
     "mocha": "11.0.1",
+    "pinst": "3.0.0",
     "prettier": "3.4.2",
     "prettier-eslint": "16.3.0",
     "proxyquire": "2.1.3",
