--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "pack": "yarn run build && yarn pack --out ./%s-%v.tgz"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "3.2.3",
+    "@iobroker/adapter-core": "^3.2.3",
     "bosch-smart-home-bridge": "1.7.0",
     "rxjs": "7.8.1"
   },
@@ -54,8 +54,8 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.17.0",
-    "@iobroker/adapter-dev": "1.3.0",
-    "@iobroker/testing": "5.0.0",
+    "@iobroker/adapter-dev": "^1.3.0",
+    "@iobroker/testing": "^5.0.0",
     "@iobroker/types": "7.0.6",
     "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "^10.0.1",
