--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   FORCE_COLOR: 1
+  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 # Cancel previous PR/branch runs when a new commit is pushed
 concurrency:
