ci: enable workflow dispatch

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - "*"
   pull_request: { }
+  workflow_dispatch:
 
 # Cancel previous PR/branch runs when a new commit is pushed
 concurrency:
