--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 env:
   FORCE_COLOR: 1
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  HUSKY: 0
 
 # Cancel previous PR/branch runs when a new commit is pushed
 concurrency:
@@ -68,6 +69,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - uses: actions/setup-node@v4
         with:
