feat: update dependencies and fix missing room bug

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -9,7 +9,7 @@ plugins:
   - '@semantic-release/git'
   - '@semantic-release/exec'
   - '@semantic-release/github'
-  - 'semantic-release-yarn'
+  - '@semantic-release/npm'
 
 dryRun: false
 ci: true
