--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,12 @@ concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   # Performs quick checks before the expensive test runs
   check-and-lint:
